dark mode fixes

--- a/themes/material/blueprint/blueprint.css
+++ b/themes/material/blueprint/blueprint.css
@@ -7,10 +7,3 @@
 .aurora-blueprint-container {
 
 }
-
-
-div:empty {
-    outline: 2px solid deeppink;
-    height: 1em;
-}
-
