--- a/themes/material/component-actions/materialactions.css
+++ b/themes/material/component-actions/materialactions.css
@@ -65,10 +65,10 @@ open-up-right {
     font-size: 16px;
     text-align: left;
     list-style: none;
-    background-color: #fff;
+    background-color: var(--md-sys-color-surface);
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
-    border: 1px solid #e2e4e7;
+    border: 1px solid var(--md-sys-color-outline-variant);
     /* border: 1px solid rgba(0, 0, 0, .15); */
 /*    border-radius: 8px; */
     border-radius: 4px;
@@ -82,6 +82,7 @@ open-up-right {
 .aurora-actions-menu .aurora-menu-icon {
     margin-right: 12px;
     font-size: 24px;
+    color: var(--md-sys-color-on-surface);
 }
 
 /*
@@ -95,8 +96,8 @@ open-up-right {
 .align-left .aurora-actions-menu.open-up {  left: -0.5em; bottom: 2em; }
 .align-right .aurora-actions-menu.open-up { left: -0.5em; bottom: 2em; }
 
-.align-right .aurora-actions-menu.open-down:before { left: 15px;  top: 9px;}
-.align-left .aurora-actions-menu.open-down:before  { right: 15px; top: 9px;}
+.align-right .aurora-actions-menu.open-down:before { left: 15px;  top: 8px;}
+.align-left .aurora-actions-menu.open-down:before  { right: 15px; top: 8px;}
 
 .align-right .aurora-actions-menu.open-up:before   { left: 15px;  bottom: -9px;}
 
@@ -105,12 +106,12 @@ open-up-right {
     display: block;
     position: absolute;
     right: 15px;
-    border-top: 1px solid #e2e4e7;
-    border-right: 1px solid #e2e4e7;
+    border-top: 1px solid var(--md-sys-color-outline-variant);
+    border-right: 1px solid var(--md-sys-color-outline-variant);
     margin-top: -17px;
     width: 15px;
     height: 15px;
-    background: #fff;
+    background-color: var(--md-sys-color-surface);
 
     /*
     background: -moz-linear-gradient(45deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 1) 51%, rgba(255, 255, 255, 1) 100%);
@@ -161,12 +162,12 @@ open-up-right {
     padding: 10px 0px 10px 0px;
     cursor: pointer;
     white-space: nowrap;
-    color: #444 !important;
+    color: var(--md-sys-color-on-surface);
 }
 
 .aurora-actions-menu>ul>li:focus,
 .aurora-actions-menu>ul>li:hover {
-    background-color: #f5f5f5;
+    background-color: var(--md-sys-color-surface-variant);
 }
 
 /* Action Container */
